feat: gitignore 수정
index.html 파일 제외

--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,4 @@ out/
 
 # Vue.js
 **/src/main/resources/static/vue/
-**/src/main/resources/templates/vue/index.html
+**/src/main/resources/templates/vue/
