--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // swagger
+    // 접속 url: http://localhost:8080/swagger-ui/
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 }
 
 tasks.named('test') {
