--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
     // swagger
     // 접속 url: http://localhost:8080/swagger-ui/
-    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 }
 
 tasks.named('test') {
