fix: springdoc Swagger UI Configuration 관련 에러 수정을 위한 dependency 제거

--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
     // swagger
     // 접속 url: http://localhost:8080/swagger-ui/
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+    // implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 }
 
 tasks.named('test') {
