--- a/vue/frontend/package.json
+++ b/vue/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
