--- a/vue/frontend/package.json
+++ b/vue/frontend/package.json
@@ -18,7 +18,6 @@
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
-    "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.1.0",
     "webfontloader": "^1.0.0"
   },
@@ -29,9 +28,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-cli-plugin-vuetify": "~2.5.8",
-    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
+    "eslint-plugin-vue": "^8.0.3"
   },
   "eslintConfig": {
     "root": true,
