--- a/vue/frontend/package.json
+++ b/vue/frontend/package.json
@@ -10,14 +10,11 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "@popperjs/core": "^2.11.8",
-    "autoprefixer": "^10",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "luxon": "^3.3.0",
     "npm": "^9.7.2",
-    "postcss": "^8",
     "roboto-fontface": "*",
-    "tailwindcss": "^3",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0",
@@ -29,8 +26,12 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^3.5.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "vue-cli-plugin-tailwind": "~3.0.0"
   },
   "eslintConfig": {
