--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.devtools.restart.enabled=true
 
-#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=sa
+spring.datasource.url=jdbc:mysql://localhost:3306/my_blog
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=0000
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=none
