--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,9 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=none
+# ?? ? DB? ?? ??? ??
+spring.sql.init.schema-locations=classpath:sql/ddl.sql
+spring.sql.init.data-locations=classpath:sql/insert.sql
+spring.sql.init.mode=always
+
+decorator.datasource.p6spy.enable-logging=true
