--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
+logging.level.org.hibernate.sql=debug
+
 # ?? ? DB? ?? ??? ??
 spring.sql.init.schema-locations=classpath:sql/ddl.sql
 spring.sql.init.data-locations=classpath:sql/insert.sql
