--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.sql=debug
 
-# ?? ? DB? ?? ??? ??
 spring.sql.init.schema-locations=classpath:sql/ddl.sql
 spring.sql.init.data-locations=classpath:sql/insert.sql
 spring.sql.init.mode=always
 
 decorator.datasource.p6spy.enable-logging=true
+
+logging.level.org.springframework.core.LocalVariableTableParameterNameDiscoverer = error
