--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,24 @@
 spring.devtools.restart.enabled=true
 
+# datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/my_blog
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=0000
 
+# jpa
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-
-logging.level.org.hibernate.sql=debug
 
 spring.sql.init.schema-locations=classpath:sql/ddl.sql
 spring.sql.init.data-locations=classpath:sql/insert.sql
 spring.sql.init.mode=always
 
+# p6spy log
+logging.level.p6spy=info
 decorator.datasource.p6spy.enable-logging=true
 
+# logging
+logging.level.org.hibernate.sql=debug
 logging.level.org.springframework.core.LocalVariableTableParameterNameDiscoverer = error
